mettre en place les styles du bloc footer

--- a/src/includes/_footer.pug
+++ b/src/includes/_footer.pug
@@ -11,8 +11,8 @@ mj-section
             mj-social-element(src="./images/youtubeIcon.png" href="https://www.youtube.com/user/NETGEAR")
 mj-section
     mj-column
-        mj-text(padding="0" mj-class="T12-400" line-height="13px" ) 01 39 23 99 59 | reponserapide@netgear.com | NETGEAR | 2 rue de Marly le roi 78150 LE CHESNAY
-        mj-text(padding="0" mj-class="T12-400" line-height="13px" ) Cet email est destiné à %%emailaddr%% . Si vous ne souhaitez plus recevoir d'emails, vous pouvez vous désinscrire .
-        mj-text(padding="0" mj-class="T12-400" line-height="13px" ) Cet email a été envoyé par : %%Member_Busname%%
+        mj-text(padding="0" mj-class="T12-400" line-height="13px" ) 01 39 23 99 59 | #[a(href="#") reponserapide@netgear.com] | NETGEAR | 2 rue de Marly le roi 78150 LE CHESNAY
+        mj-text(padding="0" mj-class="T12-400" line-height="13px" ) Cet email est destiné à #[a(href="#") %%emailaddr%%]. Si vous ne souhaitez plus recevoir d'emails, vous pouvez vous désinscrire .
+        mj-text(padding="0" mj-class="T12-400" line-height="13px" ) Cet email a été envoyé par : #[strong %%Member_Busname%%]
         mj-text(padding="0" mj-class="T12-400" line-height="13px" ) %%Member_Addr%% %%Member_City%%, %%Member_State%%, %%Member_PostalCode%%, %%Member_Country%%
-        mj-text(padding="0" mj-class="T12-400" line-height="13px" ) Mise à jour de votre profil
+        mj-text(padding="0" mj-class="T12-400" line-height="13px" ) #[a(href="#") Mise à jour de votre profil]
