--- a/src/includes/_prod01.pug
+++ b/src/includes/_prod01.pug
@@ -1,19 +1,19 @@
-mj-section
+mj-section(mj-class="bgW")
     mj-column
         mj-image(padding="0" width="700px" src="./images/illustrationWAX214.png" alt="")/
-        mj-text(padding="0" align="center" mj-class="T35-300" line-height="42px") Un WiFi puissant et abordable
-        mj-text(padding="0" align="center" mj-class="T14-400" line-height="18px") Des TPE aux PME, NETGEAR propose une gamme de produits WiFi qui fournit des connexions ultra-rapides à un tarif abordable. #[strong Déployez un WiFi professionnel, sécurisé et fiable avec NETGEAR.]
-mj-section
+        mj-text(padding="0" align="center" mj-class="T35-300 cB" line-height="42px") Un WiFi puissant et abordable
+        mj-text(padding="0" align="center" mj-class="T14-400 cT1" line-height="18px") Des TPE aux PME, NETGEAR propose une gamme de produits WiFi qui fournit des connexions ultra-rapides à un tarif abordable. #[strong Déployez un WiFi professionnel, sécurisé et fiable avec NETGEAR.]
+mj-section(mj-class="bgW")
     mj-group(width="100%")
         mj-column(vertical-align="middle")
             mj-image(src="./images/wax214.png" alt="")/
         mj-column(vertical-align="middle")
-            mj-text(padding="0" mj-class="T24-500" line-height="28px") #[span(style="text-transform:uppercase;") wax124]
-            mj-text(padding="0" mj-class="T14-400" line-height="20px") #[strong WiFi 6 AX1800] 1.8 Gbit/s
-            mj-text(padding="0" mj-class="T14-400" line-height="20px") #[strong Dual band] (2.4 GHz et 5.0 GHz)
-            mj-text(padding="0" mj-class="T14-400" line-height="20px") Port Ethernet #[strong Gigabit]
-            mj-text(padding="0" mj-class="T14-400" line-height="20px") Alimentable en #[strong PoE]
-            mj-text(padding="0" mj-class="T14-400" line-height="20px") #[strong Garantie :] 5ans
-            mj-text(padding="0" mj-class="T14-400" line-height="20px") #[strong Référence :] WAX214-100EUS
+            mj-text(padding="0" mj-class="T24-500 cB" line-height="28px") #[span(style="text-transform:uppercase;") wax124]
+            mj-text(padding="0" mj-class="T14-400 cT1" line-height="20px") #[strong WiFi 6 AX1800] 1.8 Gbit/s
+            mj-text(padding="0" mj-class="T14-400 cT1" line-height="20px") #[strong Dual band] (2.4 GHz et 5.0 GHz)
+            mj-text(padding="0" mj-class="T14-400 cT1" line-height="20px") Port Ethernet #[strong Gigabit]
+            mj-text(padding="0" mj-class="T14-400 cT1" line-height="20px") Alimentable en #[strong PoE]
+            mj-text(padding="0" mj-class="T14-400 cT1" line-height="20px") #[strong Garantie :] 5ans
+            mj-text(padding="0" mj-class="T14-400 cT1" line-height="20px") #[strong Référence :] WAX214-100EUS
     mj-column(width="100%")
-        mj-button retrouvez toutes nos offres wifi
+        mj-button(mj-class="bgB") retrouvez toutes nos offres wifi
