--- a/src/mjml/index.mjml
+++ b/src/mjml/index.mjml
@@ -43,10 +43,10 @@
         </mj-column>
       </mj-group>
     </mj-section>
-    <mj-section>
+    <mj-section mj-class="bgT1">
       <mj-column> 
-        <mj-text padding="0" align="center" mj-class="T35-300" line-height="45px">Nouvelles promotions partenaires </mj-text>
-        <mj-text padding="0" align="center" mj-class="T27-300" line-height="45px">3e trimestre</mj-text>
+        <mj-text padding="0" align="center" mj-class="T35-300 cTW" line-height="45px">Nouvelles promotions partenaires </mj-text>
+        <mj-text padding="0" align="center" mj-class="T27-300 cTW" line-height="45px">3e trimestre</mj-text>
       </mj-column>
     </mj-section>
     <mj-section mj-class="bgW">
