color du bloc prod02

--- a/src/includes/_prod01.pug
+++ b/src/includes/_prod01.pug
@@ -14,6 +14,6 @@ mj-section(mj-class="bgW")
             mj-text(padding="0" mj-class="T14-400 cT1" line-height="20px") Port Ethernet #[strong Gigabit]
             mj-text(padding="0" mj-class="T14-400 cT1" line-height="20px") Alimentable en #[strong PoE]
             mj-text(padding="0" mj-class="T14-400 cT1" line-height="20px") #[strong Garantie :] 5ans
-            mj-text(padding="0" mj-class="T14-400 cT1" line-height="20px") #[strong Référence :] WAX214-100EUS
+            mj-text(padding="0" mj-class="T14-400 cB" line-height="20px") #[strong Référence :] WAX214-100EUS
     mj-column(width="100%")
         mj-button(mj-class="bgB") retrouvez toutes nos offres wifi
