--- a/src/includes/_prod02.pug
+++ b/src/includes/_prod02.pug
@@ -1,19 +1,19 @@
-mj-section
+mj-section(mj-class="bgW")
     mj-column
         mj-image(padding="0" width="700px" src="./images/illustrationGS108E.png" alt="")/
-        mj-text(padding="0" align="center" mj-class="T35-300 cB" line-height="42px") Des Switches de pointe
-        mj-text(padding="0" align="center" mj-class="T14-400" line-height="18px") #[strong Les switches NETGEAR non manageables sont les plus populaires] auprès des petites entreprises. Au cours des 25 dernières années, nous avons vendu plusieurs millions de switches, dans le monde entier. Nos clients apprécient la fiabilité, la qualité de fabrication, la facilité d'installation et la rentabilité.
-        mj-text(padding="0" align="center" mj-class="T14-400" line-height="18px") #[strong Les switches Web manageables NETGEAR offrent des fonctionnalités avancées de niveau 2.] Ils sont conçus pour les réseaux convergents où les données comme la voix ou la vidéo sont routées via une plateforme unique. Les fonctionnalités ACL, la QoS, l'agrégation de lien LACP et le protocole STP garantissent un environnement sécurisé & haut débit pour les besoins réseau de l'entreprise.
-mj-section
+        mj-text(padding="0" align="center" mj-class="T35-300 cP" line-height="42px") Des Switches de pointe
+        mj-text(padding="0" align="center" mj-class="T14-400 cT1" line-height="18px") #[strong Les switches NETGEAR non manageables sont les plus populaires] auprès des petites entreprises. Au cours des 25 dernières années, nous avons vendu plusieurs millions de switches, dans le monde entier. Nos clients apprécient la fiabilité, la qualité de fabrication, la facilité d'installation et la rentabilité.
+        mj-text(padding="0" align="center" mj-class="T14-400 cT1" line-height="18px") #[strong Les switches Web manageables NETGEAR offrent des fonctionnalités avancées de niveau 2.] Ils sont conçus pour les réseaux convergents où les données comme la voix ou la vidéo sont routées via une plateforme unique. Les fonctionnalités ACL, la QoS, l'agrégation de lien LACP et le protocole STP garantissent un environnement sécurisé & haut débit pour les besoins réseau de l'entreprise.
+mj-section(mj-class="bgW")
     mj-group(width="100%")
         mj-column(vertical-align="middle")
             mj-image(src="./images/gs108e.png" alt="")/
         mj-column(vertical-align="middle")
-            mj-text(padding="0" mj-class="T24-500" line-height="28px") #[span(style="text-transform:uppercase;") gs108e]
-            mj-text(padding="0" mj-class="T14-400" line-height="20px") 8 ports #[strong Gigabit]
-            mj-text(padding="0" mj-class="T14-400" line-height="20px") Fonctionnalités #[strong d]
-            mj-text(padding="0" mj-class="T14-400" line-height="20px") Gestion des #[strong VLANs]
-            mj-text(padding="0" mj-class="T14-400" line-height="20px") #[strong Garantie :] à vie
-            mj-text(padding="0" mj-class="T14-400" line-height="20px") #[strong Référence :] gs108e-100eus
+            mj-text(padding="0" mj-class="T24-500 cP" line-height="28px") #[span(style="text-transform:uppercase;") gs108e]
+            mj-text(padding="0" mj-class="T14-400 cT1" line-height="20px") 8 ports #[strong Gigabit]
+            mj-text(padding="0" mj-class="T14-400 cT1" line-height="20px") Fonctionnalités #[strong d]
+            mj-text(padding="0" mj-class="T14-400 cT1" line-height="20px") Gestion des #[strong VLANs]
+            mj-text(padding="0" mj-class="T14-400 cT1" line-height="20px") #[strong Garantie :] à vie
+            mj-text(padding="0" mj-class="T14-400 cP" line-height="20px") #[strong Référence :] gs108e-100eus
     mj-column(width="100%")
-        mj-button retrouvez toutes nos offres sur le switching
+        mj-button(mj-class="bgP") retrouvez toutes nos offres sur le switching
