--- a/src/templates/_layout.pug
+++ b/src/templates/_layout.pug
@@ -30,6 +30,8 @@ mjml
             //- Colors
             mj-class(name="cB" color="#00A4DE")/
             mj-class(name="bgB" background-color="#00A4DE")/
+            mj-class(name="cP" color="#73389B")/
+            mj-class(name="bgP" background-color="#73389B")/
         mj-breakpoint(width="480px")
     //- Body
     mj-body(background-color='#f1f0f0' width="700px")
