--- a/src/mjml/index.mjml
+++ b/src/mjml/index.mjml
@@ -128,13 +128,13 @@
         <mj-button mj-class="bgP">retrouvez toutes nos offres sur le switching poe</mj-button>
       </mj-column>
     </mj-section>
-    <mj-section>
+    <mj-section mj-class="bgW">
       <mj-column>
         <mj-image padding="0" width="700px" src="./images/29stockage.png" alt=""/>
-        <mj-text padding="0" align="center" mj-class="T35-300" line-height="42px">Protégez vos données</mj-text>
-        <mj-text padding="0" align="center" mj-class="T14-400" line-height="18px">Toutes les entreprises produisent des données pour différents aspects de leur activité. <strong>La sauvegarde de ces données est essentielle pour tout plan opérationnel ou de continuité d'activité.</strong> Si vous recherchez une solution de sauvegarde de données, ReadyNAS est la meilleure alternative pour les PME ayant un budget limité. Hautement évolutives, ces solutions sont fiables et offrent une sécurité exceptionnelle.</mj-text>
-        <mj-button>retrouvez toutes nos offres sur le stockage</mj-button>
-        <mj-text padding="0" align="center" mj-class="T11-300" line-height="14px">* Offres spéciales partenaires valables chez les distributeurs officiels ALSO, INGRAM, EXERTIS, TECH DATA jusqu'au 24/09/2021 dans la limite des stocks facturables. Non cumulables avec d'autres offres spéciales. Ces offres peuvent être arrêtées à tout moment par NETGEAR. Prix d'achat revendeur promotionnels indicatifs, les distributeurs NETGEAR sont libres de fixer leur prix de revente.</mj-text>
+        <mj-text padding="0" align="center" mj-class="T35-300 cT1" line-height="42px">Protégez vos données</mj-text>
+        <mj-text padding="0" align="center" mj-class="T14-400 cT1" line-height="18px">Toutes les entreprises produisent des données pour différents aspects de leur activité. <strong>La sauvegarde de ces données est essentielle pour tout plan opérationnel ou de continuité d'activité.</strong> Si vous recherchez une solution de sauvegarde de données, ReadyNAS est la meilleure alternative pour les PME ayant un budget limité. Hautement évolutives, ces solutions sont fiables et offrent une sécurité exceptionnelle.</mj-text>
+        <mj-button mj-class="bgT1">retrouvez toutes nos offres sur le stockage</mj-button>
+        <mj-text padding="0" align="center" mj-class="T11-300 cT1" line-height="14px">* Offres spéciales partenaires valables chez les distributeurs officiels ALSO, INGRAM, EXERTIS, TECH DATA jusqu'au 24/09/2021 dans la limite des stocks facturables. Non cumulables avec d'autres offres spéciales. Ces offres peuvent être arrêtées à tout moment par NETGEAR. Prix d'achat revendeur promotionnels indicatifs, les distributeurs NETGEAR sont libres de fixer leur prix de revente.</mj-text>
       </mj-column>
     </mj-section>
     <mj-section>
