--- a/src/index.pug
+++ b/src/index.pug
@@ -5,4 +5,4 @@ block content
             mj-column(vertical-align="middle")
                 mj-image(align="left" padding="0" width="130px" src="./images/netgearBusinessW.png" alt="logo Netgear en noir")/
             mj-column(vertical-align="middle")
-                mj-text(align="right" padding="0" mj-class="T9-400" color="#ababab" text-transform="uppercase" letter-spacing="2px") #[a(style="text-decoration:none;color:#ababab;" href="#") version en ligne&nbsp;&#x23f5;]
+                mj-text(align="right" padding="0" mj-class="T9-400" line-height="11px" color="#ababab" text-transform="uppercase" letter-spacing="2px") #[a(style="text-decoration:none;color:#ababab;" href="#") version en ligne&nbsp;&#x23f5;]
