--- a/src/templates/_layout.pug
+++ b/src/templates/_layout.pug
@@ -19,6 +19,7 @@ mjml
             mj-class(name='T14-400' font-family='"Source Sans 3", Arial, Helvetica, sans-serif' font-style="normal" font-size='14px' font-weight="400")/
             mj-class(name='T12-400' font-family='"Source Sans 3", Arial, Helvetica, sans-serif' font-style="normal" font-size='12px' font-weight="400")/
             mj-class(name='T11-300' font-family='"Source Sans 3", Arial, Helvetica, sans-serif' font-style="normal" font-size='11px' font-weight="300")/
+            mj-class(name='T9-400' font-family='"Source Sans 3", Arial, Helvetica, sans-serif' font-style="normal" font-size='9px' font-weight="400")/
             mj-button(padding="0" inner-padding="10px 45px" border-radius="20px" font-family='"Source Sans 3", Arial, Helvetica, sans-serif' font-style="normal" font-size='16px' line-height='20px' font-weight='700' text-transform="uppercase")
             //- Black colors text
             mj-class(name="cT1" color="#2c262d")/
