mettre en place des points du bloc prod01 prod02 prod03

--- a/src/includes/_prod02.pug
+++ b/src/includes/_prod02.pug
@@ -10,10 +10,10 @@ mj-section(mj-class="bgW")
             mj-image(src="./images/gs108e.png" alt="")/
         mj-column(vertical-align="middle")
             mj-text(padding="0" mj-class="T24-500 cP" line-height="28px") #[span(style="text-transform:uppercase;") gs108e]
-            mj-text(padding="0" mj-class="T14-400 cT1" line-height="20px") 8 ports #[strong Gigabit]
-            mj-text(padding="0" mj-class="T14-400 cT1" line-height="20px") Fonctionnalités #[strong d]
-            mj-text(padding="0" mj-class="T14-400 cT1" line-height="20px") Gestion des #[strong VLANs]
-            mj-text(padding="0" mj-class="T14-400 cT1" line-height="20px") #[strong Garantie :] à vie
-            mj-text(padding="0" mj-class="T14-400 cP" line-height="20px") #[strong Référence :] gs108e-100eus
+            mj-text(padding="0" mj-class="T14-400 cT1" line-height="20px") &#8226;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;8 ports #[strong Gigabit]
+            mj-text(padding="0" mj-class="T14-400 cT1" line-height="20px") &#8226;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Fonctionnalités #[strong d]
+            mj-text(padding="0" mj-class="T14-400 cT1" line-height="20px") &#8226;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Gestion des #[strong VLANs]
+            mj-text(padding="0" mj-class="T14-400 cT1" line-height="20px") &#8226;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;#[strong Garantie :] à vie
+            mj-text(padding="0" mj-class="T14-400 cP" line-height="20px") &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;#[strong Référence :] gs108e-100eus
     mj-column(width="100%")
         mj-button(mj-class="bgP") retrouvez toutes nos offres sur le switching
