--- a/src/includes/_prod01.pug
+++ b/src/includes/_prod01.pug
@@ -9,11 +9,11 @@ mj-section(mj-class="bgW")
             mj-image(src="./images/wax214.png" alt="")/
         mj-column(vertical-align="middle")
             mj-text(padding="0" mj-class="T24-500 cB" line-height="28px") #[span(style="text-transform:uppercase;") wax124]
-            mj-text(padding="0" mj-class="T14-400 cT1" line-height="20px") #[strong WiFi 6 AX1800] 1.8 Gbit/s
-            mj-text(padding="0" mj-class="T14-400 cT1" line-height="20px") #[strong Dual band] (2.4 GHz et 5.0 GHz)
-            mj-text(padding="0" mj-class="T14-400 cT1" line-height="20px") Port Ethernet #[strong Gigabit]
-            mj-text(padding="0" mj-class="T14-400 cT1" line-height="20px") Alimentable en #[strong PoE]
-            mj-text(padding="0" mj-class="T14-400 cT1" line-height="20px") #[strong Garantie :] 5ans
-            mj-text(padding="0" mj-class="T14-400 cB" line-height="20px") #[strong Référence :] WAX214-100EUS
+            mj-text(padding="0" mj-class="T14-400 cT1" line-height="20px") &#8226;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;#[strong WiFi 6 AX1800] 1.8 Gbit/s
+            mj-text(padding="0" mj-class="T14-400 cT1" line-height="20px") &#8226;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;#[strong Dual band] (2.4 GHz et 5.0 GHz)
+            mj-text(padding="0" mj-class="T14-400 cT1" line-height="20px") &#8226;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Port Ethernet #[strong Gigabit]
+            mj-text(padding="0" mj-class="T14-400 cT1" line-height="20px") &#8226;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Alimentable en #[strong PoE]
+            mj-text(padding="0" mj-class="T14-400 cT1" line-height="20px") &#8226;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;#[strong Garantie :] 5ans
+            mj-text(padding="0" mj-class="T14-400 cB" line-height="20px") &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;#[strong Référence :] WAX214-100EUS
     mj-column(width="100%")
         mj-button(mj-class="bgB") retrouvez toutes nos offres wifi
