--- a/src/includes/_prod03.pug
+++ b/src/includes/_prod03.pug
@@ -9,10 +9,10 @@ mj-section(mj-class="bgW")
             mj-image(src="./images/gs308p.png" alt="")
         mj-column(vertical-align="middle")
             mj-text(padding="0" mj-class="T24-500 cP" line-height="28px") #[span(style="text-transform:uppercase;") gs308p]
-            mj-text(padding="0" mj-class="T14-400 cT1" line-height="20px") 8 ports #[strong Gigabit dont 4 PoE]
-            mj-text(padding="0" mj-class="T14-400 cT1" line-height="20px") #[strong Budget PoE :] 53 W
-            mj-text(padding="0" mj-class="T14-400 cT1" line-height="20px") #[strong Non manageable]
-            mj-text(padding="0" mj-class="T14-400 cT1" line-height="20px") #[strong Garantie :] 3 ans
-            mj-text(padding="0" mj-class="T14-400 cP" line-height="20px") #[strong Référence :] GS308P-100EUS
+            mj-text(padding="0" mj-class="T14-400 cT1" line-height="20px") &#8226;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;8 ports #[strong Gigabit dont 4 PoE]
+            mj-text(padding="0" mj-class="T14-400 cT1" line-height="20px") &#8226;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;#[strong Budget PoE :] 53 W
+            mj-text(padding="0" mj-class="T14-400 cT1" line-height="20px") &#8226;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;#[strong Non manageable]
+            mj-text(padding="0" mj-class="T14-400 cT1" line-height="20px") &#8226;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;#[strong Garantie :] 3 ans
+            mj-text(padding="0" mj-class="T14-400 cP" line-height="20px") &#8226;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;#[strong Référence :] GS308P-100EUS
     mj-column(width="100%")
         mj-button(mj-class="bgP") retrouvez toutes nos offres sur le switching poe
