--- a/src/mjml/index.mjml
+++ b/src/mjml/index.mjml
@@ -66,12 +66,12 @@
         </mj-column>
         <mj-column vertical-align="middle">
           <mj-text padding="0" mj-class="T24-500 cB" line-height="28px"><span style="text-transform:uppercase;">wax124</span></mj-text>
-          <mj-text padding="0" mj-class="T14-400 cT1" line-height="20px"><strong>WiFi 6 AX1800</strong> 1.8 Gbit/s</mj-text>
-          <mj-text padding="0" mj-class="T14-400 cT1" line-height="20px"><strong>Dual band</strong> (2.4 GHz et 5.0 GHz)</mj-text>
-          <mj-text padding="0" mj-class="T14-400 cT1" line-height="20px">Port Ethernet <strong>Gigabit</strong></mj-text>
-          <mj-text padding="0" mj-class="T14-400 cT1" line-height="20px">Alimentable en <strong>PoE</strong></mj-text>
-          <mj-text padding="0" mj-class="T14-400 cT1" line-height="20px"><strong>Garantie :</strong> 5ans</mj-text>
-          <mj-text padding="0" mj-class="T14-400 cB" line-height="20px"><strong>Référence :</strong> WAX214-100EUS</mj-text>
+          <mj-text padding="0" mj-class="T14-400 cT1" line-height="20px">&#8226;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>WiFi 6 AX1800</strong> 1.8 Gbit/s</mj-text>
+          <mj-text padding="0" mj-class="T14-400 cT1" line-height="20px">&#8226;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>Dual band</strong> (2.4 GHz et 5.0 GHz)</mj-text>
+          <mj-text padding="0" mj-class="T14-400 cT1" line-height="20px">&#8226;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Port Ethernet <strong>Gigabit</strong></mj-text>
+          <mj-text padding="0" mj-class="T14-400 cT1" line-height="20px">&#8226;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Alimentable en <strong>PoE</strong></mj-text>
+          <mj-text padding="0" mj-class="T14-400 cT1" line-height="20px">&#8226;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>Garantie :</strong> 5ans</mj-text>
+          <mj-text padding="0" mj-class="T14-400 cB" line-height="20px">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>Référence :</strong> WAX214-100EUS</mj-text>
         </mj-column>
       </mj-group>
       <mj-column width="100%">
@@ -93,11 +93,11 @@
         </mj-column>
         <mj-column vertical-align="middle">
           <mj-text padding="0" mj-class="T24-500 cP" line-height="28px"><span style="text-transform:uppercase;">gs108e</span></mj-text>
-          <mj-text padding="0" mj-class="T14-400 cT1" line-height="20px">8 ports <strong>Gigabit</strong></mj-text>
-          <mj-text padding="0" mj-class="T14-400 cT1" line-height="20px">Fonctionnalités <strong>d</strong></mj-text>
-          <mj-text padding="0" mj-class="T14-400 cT1" line-height="20px">Gestion des <strong>VLANs</strong></mj-text>
-          <mj-text padding="0" mj-class="T14-400 cT1" line-height="20px"><strong>Garantie :</strong> à vie</mj-text>
-          <mj-text padding="0" mj-class="T14-400 cP" line-height="20px"><strong>Référence :</strong> gs108e-100eus</mj-text>
+          <mj-text padding="0" mj-class="T14-400 cT1" line-height="20px">&#8226;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;8 ports <strong>Gigabit</strong></mj-text>
+          <mj-text padding="0" mj-class="T14-400 cT1" line-height="20px">&#8226;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Fonctionnalités <strong>d</strong></mj-text>
+          <mj-text padding="0" mj-class="T14-400 cT1" line-height="20px">&#8226;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Gestion des <strong>VLANs</strong></mj-text>
+          <mj-text padding="0" mj-class="T14-400 cT1" line-height="20px">&#8226;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>Garantie :</strong> à vie</mj-text>
+          <mj-text padding="0" mj-class="T14-400 cP" line-height="20px">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>Référence :</strong> gs108e-100eus</mj-text>
         </mj-column>
       </mj-group>
       <mj-column width="100%">
@@ -118,11 +118,11 @@
         </mj-column>
         <mj-column vertical-align="middle">
           <mj-text padding="0" mj-class="T24-500 cP" line-height="28px"><span style="text-transform:uppercase;">gs308p</span></mj-text>
-          <mj-text padding="0" mj-class="T14-400 cT1" line-height="20px">8 ports <strong>Gigabit dont 4 PoE</strong></mj-text>
-          <mj-text padding="0" mj-class="T14-400 cT1" line-height="20px"><strong>Budget PoE :</strong> 53 W</mj-text>
-          <mj-text padding="0" mj-class="T14-400 cT1" line-height="20px"><strong>Non manageable</strong></mj-text>
-          <mj-text padding="0" mj-class="T14-400 cT1" line-height="20px"><strong>Garantie :</strong> 3 ans</mj-text>
-          <mj-text padding="0" mj-class="T14-400 cP" line-height="20px"><strong>Référence :</strong> GS308P-100EUS</mj-text>
+          <mj-text padding="0" mj-class="T14-400 cT1" line-height="20px">&#8226;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;8 ports <strong>Gigabit dont 4 PoE</strong></mj-text>
+          <mj-text padding="0" mj-class="T14-400 cT1" line-height="20px">&#8226;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>Budget PoE :</strong> 53 W</mj-text>
+          <mj-text padding="0" mj-class="T14-400 cT1" line-height="20px">&#8226;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>Non manageable</strong></mj-text>
+          <mj-text padding="0" mj-class="T14-400 cT1" line-height="20px">&#8226;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>Garantie :</strong> 3 ans</mj-text>
+          <mj-text padding="0" mj-class="T14-400 cP" line-height="20px">&#8226;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>Référence :</strong> GS308P-100EUS</mj-text>
         </mj-column>
       </mj-group>
       <mj-column width="100%">
@@ -146,7 +146,7 @@
         <mj-spacer height="20px"></mj-spacer>
       </mj-column>
       <mj-column vertical-align="middle">
-        <mj-social padding="0" icon-size="35px" mode="horizontal">
+        <mj-social padding="0" icon-size="27px" mode="horizontal">
           <mj-social-element src="./images/facebookIcon.png" href="https://www.facebook.com/NetgearBusiness"></mj-social-element>
           <mj-social-element src="./images/twitterIcon.png" href="https://twitter.com/NetgearBusiness"></mj-social-element>
           <mj-social-element src="./images/linkedinIcon.png" href="https://www.linkedin.com/company/netgearbusiness/"></mj-social-element>
