espace du bloc header

--- a/src/includes/_header.pug
+++ b/src/includes/_header.pug
@@ -1,4 +1,4 @@
-mj-section(mj-class="bgT1")
+mj-section(padding="22px 50px 30px 50px"mj-class="bgT1")
     mj-column 
         mj-text(padding="0" align="center" mj-class="T35-300 cTW" line-height="45px") Nouvelles promotions partenaires 
         mj-text(padding="0" align="center" mj-class="T27-300 cTW" line-height="45px") 3e trimestre
