espace du bloc prod01

--- a/src/includes/_prod01.pug
+++ b/src/includes/_prod01.pug
@@ -1,19 +1,23 @@
-mj-section(mj-class="bgW")
+mj-section(padding="0")
     mj-column
         mj-image(padding="0" width="700px" src="./images/illustrationWAX214.png" alt="")/
-        mj-text(padding="0" align="center" mj-class="T35-300 cB" line-height="42px") Un WiFi puissant et abordable
-        mj-text(padding="0" align="center" mj-class="T14-400 cT1" line-height="18px") Des TPE aux PME, NETGEAR propose une gamme de produits WiFi qui fournit des connexions ultra-rapides à un tarif abordable. #[strong Déployez un WiFi professionnel, sécurisé et fiable avec NETGEAR.]
-mj-section(mj-class="bgW")
-    mj-group(width="100%")
-        mj-column(vertical-align="middle")
-            mj-image(src="./images/wax214.png" alt="")/
-        mj-column(vertical-align="middle")
-            mj-text(padding="0" mj-class="T24-500 cB" line-height="28px") #[span(style="text-transform:uppercase;") wax124]
-            mj-text(padding="0" mj-class="T14-400 cT1" line-height="20px") &#8226;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;#[strong WiFi 6 AX1800] 1.8 Gbit/s
-            mj-text(padding="0" mj-class="T14-400 cT1" line-height="20px") &#8226;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;#[strong Dual band] (2.4 GHz et 5.0 GHz)
-            mj-text(padding="0" mj-class="T14-400 cT1" line-height="20px") &#8226;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Port Ethernet #[strong Gigabit]
-            mj-text(padding="0" mj-class="T14-400 cT1" line-height="20px") &#8226;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Alimentable en #[strong PoE]
-            mj-text(padding="0" mj-class="T14-400 cT1" line-height="20px") &#8226;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;#[strong Garantie :] 5ans
-            mj-text(padding="0" mj-class="T14-400 cB" line-height="20px") &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;#[strong Référence :] WAX214-100EUS
-    mj-column(width="100%")
-        mj-button(mj-class="bgB") retrouvez toutes nos offres wifi
+mj-wrapper(padding="22px 50px 20px 50px" mj-class="bgW")
+    mj-section(padding="0")
+        mj-column
+            mj-text(padding="0" padding-bottom="20px" align="center" mj-class="T35-300 cB" line-height="42px") Un WiFi puissant et abordable
+            mj-text(padding="0" padding-bottom="20px" align="center" mj-class="T14-400 cT1" line-height="18px") Des TPE aux PME, NETGEAR propose une gamme de produits WiFi qui fournit des connexions ultra-rapides à un tarif abordable. #[strong Déployez un WiFi professionnel, sécurisé et fiable avec NETGEAR.]
+    mj-section(padding="0" padding-bottom="20px")   
+        mj-group
+            mj-column(vertical-align="top")
+                mj-image(padding="0" width="250px" src="./images/wax214.png" alt="")/
+            mj-column(vertical-align="top")
+                mj-text(padding="0" padding-bottom="15px" mj-class="T24-500 cB" line-height="28px") #[span(style="text-transform:uppercase;") wax124]
+                mj-text(padding="0" padding-bottom="5px" mj-class="T14-400 cT1" line-height="20px") &#8226;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;#[strong WiFi 6 AX1800] 1.8 Gbit/s
+                mj-text(padding="0" padding-bottom="5px" mj-class="T14-400 cT1" line-height="20px") &#8226;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;#[strong Dual band] (2.4 GHz et 5.0 GHz)
+                mj-text(padding="0" padding-bottom="5px" mj-class="T14-400 cT1" line-height="20px") &#8226;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Port Ethernet #[strong Gigabit]
+                mj-text(padding="0" padding-bottom="5px" mj-class="T14-400 cT1" line-height="20px") &#8226;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Alimentable en #[strong PoE]
+                mj-text(padding="0" padding-bottom="5px" mj-class="T14-400 cT1" line-height="20px") &#8226;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;#[strong Garantie :] 5ans
+                mj-text(padding="10px 0 5px 0" mj-class="T14-400 cB" line-height="20px") &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;#[strong Référence :] WAX214-100EUS
+    mj-section(padding="0" padding-bottom="20px")
+        mj-column
+            mj-button(mj-class="bgB") retrouvez toutes nos offres wifi
