--- a/src/mjml/index.mjml
+++ b/src/mjml/index.mjml
@@ -46,38 +46,46 @@
         </mj-column>
       </mj-group>
     </mj-section>
-    <mj-section mj-class="bgT1">
+    <mj-section padding="22px 50px 30px 50px" mj-class="bgT1">
       <mj-column> 
         <mj-text padding="0" align="center" mj-class="T35-300 cTW" line-height="45px">Nouvelles promotions partenaires </mj-text>
         <mj-text padding="0" align="center" mj-class="T27-300 cTW" line-height="45px">3e trimestre</mj-text>
       </mj-column>
     </mj-section>
-    <mj-section mj-class="bgW">
+    <mj-section padding="0">
       <mj-column>
         <mj-image padding="0" width="700px" src="./images/illustrationWAX214.png" alt=""/>
-        <mj-text padding="0" align="center" mj-class="T35-300 cB" line-height="42px">Un WiFi puissant et abordable</mj-text>
-        <mj-text padding="0" align="center" mj-class="T14-400 cT1" line-height="18px">Des TPE aux PME, NETGEAR propose une gamme de produits WiFi qui fournit des connexions ultra-rapides à un tarif abordable. <strong>Déployez un WiFi professionnel, sécurisé et fiable avec NETGEAR.</strong></mj-text>
       </mj-column>
     </mj-section>
-    <mj-section mj-class="bgW">
-      <mj-group width="100%">
-        <mj-column vertical-align="middle">
-          <mj-image src="./images/wax214.png" alt=""/>
+    <mj-wrapper padding="22px 50px 20px 50px" mj-class="bgW">
+      <mj-section padding="0">
+        <mj-column>
+          <mj-text padding="0" padding-bottom="20px" align="center" mj-class="T35-300 cB" line-height="42px">Un WiFi puissant et abordable</mj-text>
+          <mj-text padding="0" padding-bottom="20px" align="center" mj-class="T14-400 cT1" line-height="18px">Des TPE aux PME, NETGEAR propose une gamme de produits WiFi qui fournit des connexions ultra-rapides à un tarif abordable. <strong>Déployez un WiFi professionnel, sécurisé et fiable avec NETGEAR.</strong></mj-text>
         </mj-column>
-        <mj-column vertical-align="middle">
-          <mj-text padding="0" mj-class="T24-500 cB" line-height="28px"><span style="text-transform:uppercase;">wax124</span></mj-text>
-          <mj-text padding="0" mj-class="T14-400 cT1" line-height="20px">&#8226;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>WiFi 6 AX1800</strong> 1.8 Gbit/s</mj-text>
-          <mj-text padding="0" mj-class="T14-400 cT1" line-height="20px">&#8226;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>Dual band</strong> (2.4 GHz et 5.0 GHz)</mj-text>
-          <mj-text padding="0" mj-class="T14-400 cT1" line-height="20px">&#8226;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Port Ethernet <strong>Gigabit</strong></mj-text>
-          <mj-text padding="0" mj-class="T14-400 cT1" line-height="20px">&#8226;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Alimentable en <strong>PoE</strong></mj-text>
-          <mj-text padding="0" mj-class="T14-400 cT1" line-height="20px">&#8226;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>Garantie :</strong> 5ans</mj-text>
-          <mj-text padding="0" mj-class="T14-400 cB" line-height="20px">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>Référence :</strong> WAX214-100EUS</mj-text>
+      </mj-section>
+      <mj-section padding="0" padding-bottom="20px">  
+        <mj-group>
+          <mj-column vertical-align="top">
+            <mj-image padding="0" width="250px" src="./images/wax214.png" alt=""/>
+          </mj-column>
+          <mj-column vertical-align="top">
+            <mj-text padding="0" padding-bottom="15px" mj-class="T24-500 cB" line-height="28px"><span style="text-transform:uppercase;">wax124</span></mj-text>
+            <mj-text padding="0" padding-bottom="5px" mj-class="T14-400 cT1" line-height="20px">&#8226;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>WiFi 6 AX1800</strong> 1.8 Gbit/s</mj-text>
+            <mj-text padding="0" padding-bottom="5px" mj-class="T14-400 cT1" line-height="20px">&#8226;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>Dual band</strong> (2.4 GHz et 5.0 GHz)</mj-text>
+            <mj-text padding="0" padding-bottom="5px" mj-class="T14-400 cT1" line-height="20px">&#8226;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Port Ethernet <strong>Gigabit</strong></mj-text>
+            <mj-text padding="0" padding-bottom="5px" mj-class="T14-400 cT1" line-height="20px">&#8226;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Alimentable en <strong>PoE</strong></mj-text>
+            <mj-text padding="0" padding-bottom="5px" mj-class="T14-400 cT1" line-height="20px">&#8226;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>Garantie :</strong> 5ans</mj-text>
+            <mj-text padding="10px 0 5px 0" mj-class="T14-400 cB" line-height="20px">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>Référence :</strong> WAX214-100EUS</mj-text>
+          </mj-column>
+        </mj-group>
+      </mj-section>
+      <mj-section padding="0" padding-bottom="20px">
+        <mj-column>
+          <mj-button mj-class="bgB">retrouvez toutes nos offres wifi</mj-button>
         </mj-column>
-      </mj-group>
-      <mj-column width="100%">
-        <mj-button mj-class="bgB">retrouvez toutes nos offres wifi</mj-button>
-      </mj-column>
-    </mj-section>
+      </mj-section>
+    </mj-wrapper>
     <mj-section mj-class="bgW">
       <mj-column>
         <mj-image padding="0" width="700px" src="./images/illustrationGS108E.png" alt=""/>
